--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,27 +1,29 @@
+version: '3.9'
+
 services:
   app:
     build: ./app
     container_name: web-app
-    hostname: web-app
-    volumes: ["./app/src:/appcode"]
+    volumes:
+      - ./app/src:/app
     ports:
       - 8501:8501
 
   api:
     build: ./api
     container_name: web-api
-    hostname: web-api
-    volumes: ["./api:/apicode"]
+    volumes:
+      - ./api:/app
     ports:
       - 4000:4000
 
   db:
+    image: mysql:8.0
+    container_name: mysql_db
     env_file:
       - ./api/.env
-    image: mysql:9
-    container_name: mysql_db
-    hostname: db
     volumes:
-      - ./database-files:/docker-entrypoint-initdb.d/:ro
+      - ./database-files:/docker-entrypoint-initdb.d:ro
     ports:
       - 3200:3306
+
